FEAT: Soft delete for customer data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,4 @@ spring.jpa.hibernate.ddl-auto=update
 # JWT configuration
 app.loan_app.jwt-secret = ${JWT_SECRET}
 app.loan_app.app-name = Loan App
-app.loan_app.jwtExpiredInSecond = 3600
+app.loan_app.jwtExpiredInSecond = 36000000
